--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
-DB_HOST=localhost
-DB_PORT=8081
+DB_HOST=postgres
+DB_PORT=5432
 DB_USER=qwert
 DB_PASSWORD=12345
 DB_NAME=subscriptions
+API_PORT=8080
