add: change log level; delete: dublicatee

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,10 @@
+# DB
 DB_HOST=postgres
 DB_PORT=5432
 DB_USER=qwert
 DB_PASSWORD=12345
 DB_NAME=subscriptions
+
+# api/log level = debug/info
 API_PORT=8080
+LOG_LEVEL=info
